--- a/config/routes.ini
+++ b/config/routes.ini
@@ -4,4 +4,6 @@ GET /doc = App_controller->doc
 
 #main routes
 GET / = App_controller->home
+GET /@id-@location = App_controller->home
+
 GET /travel = App_controller->travel
