functionnal testing implement 1.0
Signed-off-by: fpumir <fpumir@terredeweb.fr>

--- a/config/globals.ini
+++ b/config/globals.ini
@@ -2,6 +2,9 @@
 
 AUTOLOAD = app/Controllers/;app/Models/;app/Helpers/
 UI = app/Views/;manual/
+LOCALES = config/locales/
+LANGUAGE = en
+
 
 #dB identifier
 db_host = localhost
