--- a/config/routes.ini
+++ b/config/routes.ini
@@ -6,4 +6,9 @@ GET /doc = App_controller->doc
 GET / = App_controller->home
 GET /@id-@location = App_controller->home
 
-GET /travel = App_controller->travel
+#tests routes
+GET /test/travel = Test_controller->travel
+
+
+[maps]
+/travel = Travel_controller
