--- a/config/routes.ini
+++ b/config/routes.ini
@@ -9,6 +9,12 @@ GET /@id-@location = App_controller->home
 #tests routes
 GET /test/travel = Test_controller->travel
 
+#admin routes
+GET /admin/dashboard = Admin_controller->dashboard
+GET|POST admin/new = Admin_controller->create
+GET|POST admin/@id/edit = Admin_controller->edit
+
+
 
 [maps]
 /travel = Travel_controller
