geocode on travel ; new methods in admin controller
Signed-off-by: fpumir <fpumir@terredeweb.fr>

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -11,8 +11,8 @@ GET /test/travel = Test_controller->travel
 
 #admin routes
 GET /admin/dashboard = Admin_controller->dashboard
-GET|POST admin/new = Admin_controller->create
-GET|POST admin/@id/edit = Admin_controller->edit
+GET|POST /admin/new = Admin_controller->create
+GET|POST /admin/@id/edit = Admin_controller->edit
 
 
 
