--- a/config/globals.ini
+++ b/config/globals.ini
@@ -4,7 +4,7 @@ AUTOLOAD = app/Controllers/;app/Models/;app/Helpers/
 UI = app/Views/;manual/
 LOCALES = config/locales/
 LANGUAGE = en
-
+UPLOADS = public/images/
 
 #dB identifier
 db_host = localhost
