--- a/config/routes.ini
+++ b/config/routes.ini
@@ -10,9 +10,12 @@ GET /@id-@location = App_controller->home
 GET /test/travel = Test_controller->travel
 
 #admin routes
+GET|POST /admin = Admin_controller->login
+GET /admin/logout = Admin_controller->logout
 GET /admin/dashboard = Admin_controller->dashboard
-GET|POST /admin/new = Admin_controller->create
 GET|POST /admin/@id/edit = Admin_controller->edit
+GET /admin/@id/delete = Admin_controller->delete
+GET|POST /admin/new = Admin_controller->create
 
 
 # 
